<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tan_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/arabic_language" />

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:text="@string/category_numbers" />

        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:layout_below="@id/numbers"
            android:background="@color/category_family"
            android:text="@string/category_family" />

        <TextView
            android:id="@+id/colors"
            style="@style/CategoryStyle"
            android:layout_below="@id/family"
            android:background="@color/category_colors"
            android:text="@string/category_colors" />

        <TextView
            android:id="@+id/phrases"
            style="@style/CategoryStyle"
            android:layout_below="@id/colors"
            android:background="@color/category_phrases"
            android:text="@string/category_phrases" />

    </RelativeLayout>
</ScrollView>

